Add Hero section to page

--- a/index.html
+++ b/index.html
@@ -24,5 +24,30 @@
         </div>
       </div>
     </nav>
+    <!-- HERO -->
+    <section class="hero">
+      <div class="hero__container">
+        <div class="hero__avatar">
+          <div class="hero__img-container">
+            <img
+              class="hero__img"
+              src="./images/sample-img.jpeg"
+              alt="sample"
+            />
+            <!-- <img class="hero__img" src="./images/han-avatar.png" alt="Avatar" /> -->
+            <div class="hero__circle hero__circle--blue"></div>
+            <div class="hero__circle hero__circle--cream"></div>
+            <div class="hero__lines">
+              <span class="hero__line"></span>
+              <span class="hero__line"></span>
+              <span class="hero__line"></span>
+            </div>
+          </div>
+        </div>
+        <h2 class="hero__text">
+          HELLO! I AM A<span class="bold">SOFTWARE ENGINEER</span>
+        </h2>
+      </div>
+    </section>
   </body>
 </html>
