Add projects section

--- a/index.html
+++ b/index.html
@@ -5,6 +5,10 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="./css/style.css" />
+    <script
+      src="https://kit.fontawesome.com/f5f5fa98ca.js"
+      crossorigin="anonymous"
+    ></script>
     <title>Handika Harianto Ew Jong</title>
   </head>
   <body>
@@ -152,5 +156,16 @@
         </div>
       </div>
     </section>
+    <!-- FEATURED PROJECTS -->
+    <section class="project">
+      <div class="project__container">
+        <h3 class="project__title">FEATURED PROJECTS</h3>
+        <p class="project__desc">
+          These are some of the projects that I've completed in the past.
+        </p>
+        <div class="project__list"></div>
+      </div>
+    </section>
+    <script type="module" src="./js/app.js"></script>
   </body>
 </html>
