Add toggleSidebar functionality

--- a/index.html
+++ b/index.html
@@ -29,8 +29,34 @@
         </div>
       </div>
     </nav>
+    <div class="sidebar-background"></div>
+    <aside class="sidebar">
+      <div class="sidebar__close-btn">
+        <span class="sidebar__line"></span>
+        <span class="sidebar__line"></span>
+      </div>
+      <div class="sidebar__container">
+        <div class="sidebar__menu">
+          <h4 class="sidebar__title sidebar__title-menu">MENU</h4>
+          <ul>
+            <li>
+              <a href="#home">Home</a>
+            </li>
+            <li>
+              <a href="#about">About</a>
+            </li>
+            <li>
+              <a href="#skills">Skills</a>
+            </li>
+            <li>
+              <a href="#projects">Projects</a>
+            </li>
+          </ul>
+        </div>
+      </div>
+    </aside>
     <!-- HERO -->
-    <section class="hero">
+    <section class="hero" id="home">
       <div class="hero__container">
         <div class="hero__avatar">
           <div class="hero__img-container">
@@ -109,7 +135,7 @@
       </div>
     </section>
     <!-- SKILLS -->
-    <section class="skills">
+    <section class="skills" id="skills">
       <div class="skills__container">
         <h3 class="skills__title">KNOWLEDGE & SKILLS</h3>
         <p class="skills__desc">
@@ -120,7 +146,7 @@
       </div>
     </section>
     <!-- FEATURED PROJECTS -->
-    <section class="project">
+    <section class="project" id="projects">
       <div class="project__container">
         <h3 class="project__title">FEATURED PROJECTS</h3>
         <p class="project__desc">
