--- a/index.html
+++ b/index.html
@@ -38,20 +38,30 @@
       <div class="sidebar__container">
         <div class="sidebar__menu">
           <h4 class="sidebar__title sidebar__title-menu">MENU</h4>
-          <ul>
+          <ul class="sidebar__links">
             <li>
-              <a href="#home">Home</a>
+              <a class="sidebar__link" href="#home">Home</a>
             </li>
             <li>
-              <a href="#about">About</a>
+              <a class="sidebar__link" href="#about">About</a>
             </li>
             <li>
-              <a href="#skills">Skills</a>
+              <a class="sidebar__link" href="#skills">Skills</a>
             </li>
             <li>
-              <a href="#projects">Projects</a>
+              <a class="sidebar__link" href="#projects">Projects</a>
             </li>
           </ul>
+        </div>
+        <div class="sidebar__email">
+          <h4 class="sidebar__title">EMAIL</h4>
+          <div>
+            <a
+              class="sidebar__email-link"
+              href="mailto: handikaharianto01@gmail.com"
+              >handikaharianto01@gmail.com</a
+            >
+          </div>
         </div>
       </div>
     </aside>
