--- a/index.html
+++ b/index.html
@@ -70,12 +70,7 @@
       <div class="hero__container">
         <div class="hero__avatar">
           <div class="hero__img-container">
-            <img
-              class="hero__img"
-              src="./images/sample-img.jpeg"
-              alt="sample"
-            />
-            <!-- <img class="hero__img" src="./images/han-avatar.png" alt="Avatar" /> -->
+            <img class="hero__img" src="./images/han-avatar.png" alt="Avatar" />
             <div class="hero__circle hero__circle--blue"></div>
             <div class="hero__circle hero__circle--cream"></div>
             <div class="hero__lines">
